--- a/src/layouts/includes/htmlhead.scripts.hbs
+++ b/src/layouts/includes/htmlhead.scripts.hbs
@@ -3,6 +3,13 @@
 <script nomodule src="https://unpkg.com/whatwg-fetch"></script>
 <script nomodule src="https://unpkg.com/promise-polyfill"></script>
 <script nomodule src="https://unpkg.com/object-assign-polyfill"></script>
+<script nomodule src="resources/js/polyfills/object-assign.polyfill.js"></script>
+<script nomodule src="resources/js/polyfills/find.polyfill.js"></script>
+<script nomodule src="https://cdn.jsdelivr.net/npm/whatwg-fetch@3.0.0/dist/fetch.umd.min.js"></script>
+<script nomodule src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
+
+<script src="resources/js/vendor/custom-elements-es5-adapter.js"></script>
+<script src="resources/js/polyfills/webcomponents-loader.js"></script>
 
 <!-- build:js(.tmp) resources/js/scripts.head.all.min.js  -->
 <script src="resources/js/vendor/modernizr.js"></script>
