Implement tracking: internal/external links, mailto links and modal links

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -62,7 +62,7 @@
 	<div class="row row--reducedWidth">
 		<div class="col">
 			<p>Want to know more about what Biotope can do for you?</p>
-			<bio-button title="Get in touch" url="mailto:biotope@virtual-identity.com"
+			<bio-button title="Get in touch" url="mailto:biotope.generic@virtual-identity.com"
 				data-resources="[{paths: ['components/BioButton/index.js']}]" modifier="large"></bio-button>
 		</div>
 	</div>
@@ -133,7 +133,7 @@
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/expert.svg" border="noBorder">
                     <p>You want to learn more? Ask an expert.</p>
-                    <bio-button modifier="full" title="Contact"></bio-button>
+                    <bio-button modifier="full" title="Contact" url="mailto:biotope.expert@virtual-identity.com"></bio-button>
                 </bio-resource>
             </div>
         </div>
@@ -181,7 +181,7 @@
                 <p>Need help setting up your frontend ecosystem? <br>
                     We love to support you.</p>
                 <bio-button title="Contact VI" modifier="full"
-                    data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                    data-resources="[{paths: ['components/BioButton/index.js']}]" url="mailto:biotope.support@virtual-identity.com"></bio-button>
             </div>
         </div>
     </div>
