--- a/src/components/BioModal/scaffolding/BioModal.hbs
+++ b/src/components/BioModal/scaffolding/BioModal.hbs
@@ -1,15 +1,36 @@
-<bio-modal openonpageload="true" data-resources="[{paths: ['components/BioModal/index.js']}]">
-    <h3>
-        Who's behind Biotope
-    </h3>
-    <bio-collaborator-list>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Marc Emmanuel</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Tiago Marques</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Timo Mayer</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="core">Danny Stey</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Dominikus Weiger</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Lukas Müller</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Benny Konopka</bio-collaborator-tile>
-        <bio-collaborator-tile imgsrc="../_assets/free.svg" type="collab">Chris Hummel</bio-collaborator-tile>
-    </bio-collaborator-list>
+<bio-modal openonpageload="{{open}}" data-resources="[{paths: ['components/BioModal/index.js']}]">
+
+    <div class="row row--reducedWidth">
+        <div class="col">
+            <div class="whosBehind">
+                <bio-section-headline>
+                    Who's behind <br><strong>Biotope?</strong>
+                </bio-section-headline>
+
+                <h2 class="whosBehind__headline">Core Group</h2>
+
+                <div class="whosBehind__list">
+                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
+                </div>
+
+                <h2 class="whosBehind__headline">Collaborators</h2>
+
+                <div class="whosBehind__list">
+                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 </bio-modal>
