splash header section changes and optimization for IE1

--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -56,7 +56,11 @@
 		
         &.long {
 			padding: 10px 15px;
-        }
+		}
+		
+		&.mediumLong{
+			width: 200px;
+		}
 
 		&.large {
 			@include breakpoint($large) {
