--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -6,13 +6,13 @@
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
         <div class="splash__content">
             <h1 class="splash__biotope">biotope</h1>
-            <h2 class="splash__uitoolchain">ui toolchain</h2>
+            <h2 class="splash__uitoolchain">Toolchain For lasting Design Systems</h2>
             <p class="splash__claim">
-                One web component library. As many worlds as you want. Decide what the future looks like.
+                Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, apps or IoT - using a single library of Web Components.
             </p>
-            <bio-button title="Explore" modifier="whiteText"
+            <bio-button title="See how it works" modifier="whiteText mediumLong"
                 data-resources="[{paths: ['components/BioButton/index.js']}]" url="#resources"></bio-button>
-            <bio-button title="See Docs" modifier="blue whiteText"
+            <bio-button title="See Docs" modifier="blue whiteText mediumLong"
                 data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://build.biotope.sh">
             </bio-button>
         </div>
