removing free icon, applying new 100% open source icon and adding text for benefits section

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -26,11 +26,12 @@
                 <img src="../_assets/intro-main.svg" alt="">
                 <div>
                     <h2>
-                        Add, change and reuse web components – on any device, anywhere.
+                        One Web Component Library. As Many Words As You Want.
                     </h2>
                     <bio-paragraph data-resources="[{paths: ['components/BioParagraph/index.js']}]">
-                        Bioto.pe’s web-component-based frontend ecosystem conrols entire Design Systems via a single
-                        repository. Add, change and reuse web components as many times you want - anywhere
+                       The superpower of Web Components is that they are reusable. Build them once and use them in any project across your whole ocmpany. 
+                       Biotope helps you build Web Components quickly, makes sure they work tohether and reconciles them into a single library. 
+                       This in turn gives you a superpower: Lasting control of your entire UI.
                     </bio-paragraph>
                     <bio-button class="js-openModal" title="Who's behind biotope" modifier="long"
                         data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
@@ -39,15 +40,16 @@
             <div class="benefits__container">
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/framework-agnostic.svg" title="Framework agnostic">
-                    Biotope can be used in combination with any other framework of your choice: Angular, React, etc.
+                    Biotope works with any framework - Angular, React, Vue, etc. so there won't be any compatability issues. Use whichever you want. Or switch when it suits you.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/future-proof.svg" title="Futureproof">
-                    Emphasis on web components. Use all your UI-components indipendently in different projects
+                    Web Components are a standard web technology. Because there is no coupling to the apps or websites for which they are used, 
+                    your library of Web Components theoretically lives on forever.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/free.svg" title="Free">
-                    The full version of biotope is opensource and will stay free of charge forever. No strings attached.
+                    imgsrc="../../_assets/icon-open-source.svg" title="100% Open Source">
+                    Biotope's entire toolchain is free. it is maintained by a community of professional developers.
                 </bio-benefit>
             </div>
         </div>
