--- a/src/components/BioScrollAnimation/styles.scss
+++ b/src/components/BioScrollAnimation/styles.scss
@@ -54,7 +54,7 @@
 				line-height: 0;
 				&:before {
 					content: ' ';
-					border: 2px solid $main-orange;
+					border: 2px solid $bio-orange;
 					border-radius: 18px;
 					display: block;
 					width: 14px;
