--- a/src/resources/scss/layouts/_default.scss
+++ b/src/resources/scss/layouts/_default.scss
@@ -18,7 +18,7 @@ body {
     background-color: $body-bg;
     font-size: $body-font-size;
     line-height: $body-line-height;
-    color: $black;
+    color: $bio-black;
     min-width: $body-min-width;
 
     -moz-osx-font-smoothing: grayscale;
