--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -52,6 +52,9 @@
             </div>
         </div>
     </div>
+
+	<bio-swoosh color="#fff" direction="down" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+
 </section>
 
 <section class="scrollAnimation">
@@ -59,45 +62,53 @@
 </section>
 
 <section class="knowMore">
+
+	<bio-swoosh color="#0A0A2C" direction="up" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+
 	<div class="row row--reducedWidth">
 		<div class="col">
 			<p>Want to know more about what Biotope can do for you?</p>
 			<bio-button title="Get in touch" url="mailto:biotope@virtual-identity.com"
-				data-resources="[{paths: ['components/BioButton/index.js']}]" modifier="large"></bio-button>
+				data-resources="[{paths: ['components/BioButton/index.js']}]" modifier="large whiteText"></bio-button>
 		</div>
 	</div>
+
 </section>
 
 <section class="soEasy">
-        <div class="row row--reducedWidth">
-            <div class="col">
-                <img class="soEasy__line" src="../_assets/BioEasySetUp/line.svg">
-                <div class="soEasy__intro">
-                    <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]"> It's so </br> <strong>easy</strong></bio-section-headline>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                </div>
-                <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/1.svg" alt="step one">
-                    <p>Get started by installing biotope with npm. It's all open-source!</p>
-                    <code>npm install biotope -g</code>
-                </bio-easy-set-up>
-                <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/2.svg" alt="step two">
-                    <p>Just one command and a few simple questions to generate all you need for your project</p>
-                    <code>biotope create myEcosystem</code>
-                </bio-easy-set-up>
-                <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/3.svg" alt="step three">
-                    <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
-                    <code>npm install</code>
-                </bio-easy-set-up>
-                <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/4.svg" alt="step four">
-                    <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
-                    <code>npm start</code>
-                </bio-easy-set-up>
-                <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/5.svg" alt="step five">
-                    <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
-                    <code>biotope generate</code>
-                </bio-easy-set-up>
-            </div>
-        </div>
+
+	<bio-swoosh color="#f8fbfd" direction="up" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+
+	<div class="row row--reducedWidth">
+		<div class="col">
+			<img class="soEasy__line" src="../_assets/BioEasySetUp/line.svg">
+			<div class="soEasy__intro">
+				<bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]"> It's so </br> <strong>easy</strong></bio-section-headline>
+				<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+			</div>
+			<bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/1.svg" alt="step one">
+				<p>Get started by installing biotope with npm. It's all open-source!</p>
+				<code>npm install biotope -g</code>
+			</bio-easy-set-up>
+			<bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/2.svg" alt="step two">
+				<p>Just one command and a few simple questions to generate all you need for your project</p>
+				<code>biotope create myEcosystem</code>
+			</bio-easy-set-up>
+			<bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/3.svg" alt="step three">
+				<p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
+				<code>npm install</code>
+			</bio-easy-set-up>
+			<bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/4.svg" alt="step four">
+				<p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
+				<code>npm start</code>
+			</bio-easy-set-up>
+			<bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/5.svg" alt="step five">
+				<p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
+				<code>biotope generate</code>
+			</bio-easy-set-up>
+		</div>
+	</div>
+
 </section>
 
 <section class="resources" id="resources">
@@ -140,6 +151,9 @@
 </section>
 
 <section class="extendedBenefits">
+
+	<bio-swoosh color="#0A0A2C" direction="up" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+
     <div class="row row--reducedWidth">
         <div class="col">
                 <bio-section-headline inverted data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
@@ -162,6 +176,9 @@
             </div>
         </div>
     </div>
+
+	<bio-swoosh color="#0A0A2C" direction="down" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+
 </section>
 <section class="company">
     <div class="row row--reducedWidth">
