--- a/src/components/BioEasySetUp/styles.scss
+++ b/src/components/BioEasySetUp/styles.scss
@@ -32,7 +32,7 @@
 			padding: 10px 20px;
 			background: $bio-white;
             border-radius: 10px;
-            box-shadow: 2px 2px 8px $shadow-gray;
+            box-shadow: 2px 2px 8px $bio-shadow-gray;
             font-weight: $font-weight-bold;
             
 			@include breakpoint($large) {
@@ -45,7 +45,7 @@
 		height: 60px;
 		width: 60px;
         margin: auto;
-        z-index: 1;
+        z-index: 3;
 
 		@include breakpoint($large) {
 			grid-column-start: 2;
