--- a/src/components/BioResource/styles.scss
+++ b/src/components/BioResource/styles.scss
@@ -7,7 +7,7 @@
 		grid-template-columns: repeat(3, 1fr);
 		grid-template-rows: 52px 1fr;
 		padding: 20px 0;
-		border-bottom: 1px solid $main-orange;
+		border-bottom: 1px solid $bio-orange;
 
 		@include breakpoint($small) {
 			grid-template-columns: 52px 1fr 200px;
@@ -23,10 +23,10 @@
 		}
 
 		&.blue {
-			border-bottom: 1px solid $dark-blue;
+			border-bottom: 1px solid $bio-dark-blue;
 
 			.wrapper__imageWrapper {
-				border: 2px solid $dark-blue;
+				border: 2px solid $bio-dark-blue;
 			}
         }
         
@@ -40,7 +40,7 @@
 			width: 48px;
 			background: $bio-white;
 			border-radius: 50%;
-			border: 2px solid $main-orange;
+			border: 2px solid $bio-orange;
 			overflow: hidden;
 
 			@include breakpoint($small) {
