--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -46,6 +46,7 @@ $small:   600px;
 $medium:  768px;
 $large:   992px;
 $xlarge:  1200px;
+$xxlarge: 1520px;
 
 // MaxValues
 $xsmallMax: $small - 1;
