--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -75,26 +75,35 @@
             <div class="col">
                 <img class="soEasy__line" src="../_assets/BioEasySetUp/line.svg">
                 <div class="soEasy__intro">
-                    <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]"> It's so </br> <strong>easy</strong></bio-section-headline>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                    <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">Biotope Installation </br> <strong>Start building within minutes.</strong></bio-section-headline>
+                    <p>
+                        No complicated registration process. No hidden costs. No more big technology decisions at the beginning of each project - 
+                        Biotope works with any framework so you can build in the environment of your choice. And everyone else too. Build up your 
+                        Web Component Library together and
+                    </p>
                 </div>
                 <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/1.svg" alt="step one">
-                    <p>Get started by installing biotope with npm. It's all open-source!</p>
+                    <h4>Install Pachage</h4>
+                    <p>Install biotope as global package with npm.</p>
                     <code>npm install biotope -g</code>
                 </bio-easy-set-up>
                 <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/2.svg" alt="step two">
-                    <p>Just one command and a few simple questions to generate all you need for your project</p>
+                    <h4>Set Up Project</h4>
+                    <p>Trust the CLI tool to set up your project. Run command to create biotope-boilerplate and choose preferences:</p>
                     <code>biotope create myEcosystem</code>
                 </bio-easy-set-up>
                 <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/3.svg" alt="step three">
-                    <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
+                    <h4>Install Build-System</h4>
+                    <p>The included build-system helps you to automatically build production-ready resources.</p>
                     <code>npm install</code>
                 </bio-easy-set-up>
                 <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/4.svg" alt="step four">
-                    <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
+                    <h4>Run Build</h4>
+                    <p>Change directory to the newly generated biotope instance and run it from there.</p>
                     <code>npm start</code>
                 </bio-easy-set-up>
                 <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/5.svg" alt="step five">
+                    <h4>Start Building Components</h4>
                     <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
                     <code>biotope generate</code>
                 </bio-easy-set-up>
