changed button link position

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -11,7 +11,7 @@
                 Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, apps or IoT - using a single library of Web Components.
             </p>
             <bio-button title="See how it works" modifier="whiteText mediumLong"
-                data-resources="[{paths: ['components/BioButton/index.js']}]" url="#resources"></bio-button>
+                data-resources="[{paths: ['components/BioButton/index.js']}]" url="#benefits"></bio-button>
             <bio-button title="See Docs" modifier="blue whiteText mediumLong"
                 data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://build.biotope.sh">
             </bio-button>
@@ -19,7 +19,7 @@
     </div>
 </header>
 
-<section class="benefits">
+<section class="benefits" id="benefits">
     <div class="row row--reducedWidth">
         <div class="col">
             <div class="benefits__claim">
@@ -100,7 +100,7 @@
         </div>
 </section>
 
-<section class="resources" id="resources">
+<section class="resources">
         <div class="row row--reducedWidth">
             <div class="col col--large-6">
                 <h3 class="resources__headline--blue">Code & Resources</h3>
