--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -154,26 +154,26 @@
     <div class="row row--reducedWidth">
         <div class="col">
                 <bio-section-headline inverted data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
-                    You will </br> <strong>Benefit</strong>
+                    Develop digital experiences </br> <strong>Flexible. Constant. Across All Devices.</strong>
                 </bio-section-headline>
             <div class="extendedBenefits__container">
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/free.svg" title="Keep focus">
-                    You develop high quality components, biotope takes care of architecture and dev environment for you
+                    imgsrc="../../_assets/icon-quality-focus.svg" title="Quality Focus">
+                    Develop high quality components instead of the architecture and development environment required. That's Biotope's job.
                 </bio-benefit>
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/free.svg" title="Open source">
-                    Keep all your design systems in one central place for multiple projects.
+                    imgsrc="../../_assets/icon-consistent-design.svg" title="Consistent Design">
+                    Roll out your interface from a single point of truth - simultaneously for all of your digital products. Keep your brand identity consistent across all your websites, apps or IoT say goodbye to design debt.
                 </bio-benefit>
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/free.svg" title="Scalability">
-                    No matter how big your library gets, your projects only use the ones they need, so performance stays
-                    high.
+                    imgsrc="../../_assets/icon-scalability.svg" title="Scalable Infrastructure">
+                    Grow your library as big as you want. With Biotope collaboration is easy and your projects only uses the Web Components they need so perormance stays high.
                 </bio-benefit>
             </div>
         </div>
     </div>
 </section>
+
 <section class="company">
     <div class="row row--reducedWidth">
         <div class="col">
@@ -197,6 +197,7 @@
         </div>
     </div>
 </section>
+
 <footer class="footer">
     <div class="row row--reducedWidth">
         <div class="col">
