--- a/src/resources/scss/fonts/_typography.scss
+++ b/src/resources/scss/fonts/_typography.scss
@@ -1,11 +1,10 @@
 %benefit-text {
     font-family: $font-family-body;
     font-weight: $font-weight-light;
-    line-height: 15px;
+    line-height: 1.35;
     font-size: 15px;
 
     @include breakpoint($medium) {
-        line-height: 15px;
         font-size: 15px;
     }
 }
@@ -34,6 +33,7 @@
 %sectionHeadlineStrong {
     font-size: 50px;
     line-height: 40px;
+    
     @include breakpoint($medium) {
         font-size: 70px;
         line-height: 60px;
