--- a/src/components/BioModal/styles.scss
+++ b/src/components/BioModal/styles.scss
@@ -1,29 +1,60 @@
-@import 'node_modules/@biotope/element/lib/host.mixin';
-@import '../../resources/scss/defaultSassImports.scss';
+@import "node_modules/@biotope/element/lib/host.mixin";
+@import "../../resources/scss/defaultSassImports.scss";
 
-@include host('bio-modal') {
+@include host("bio-modal") {
 	.modal {
 		.content {
 			display: none;
 			z-index: 11;
 			position: fixed;
+			top: 0;
+			right: 0;
+			left: 0;
+			bottom: 0;
 			padding: 5%;
-			top: 5%;
-			left: 5%;
-			bottom: 5%;
-			right: 5%;
 			box-sizing: border-box;
 			background-color: $bio-white;
 			overflow-y: scroll;
 
+			@include breakpoint($medium) {
+				top: 5%;
+				left: 5%;
+				bottom: 5%;
+				right: 5%;
+			}
+
 			.modal-close {
 				position: absolute;
-				top: 20px;
+				color: white;
+				border: none;
+				top: 33px;
 				right: 20px;
+				height: 30px;
+				width: 30px;
+				border-radius: 50%;
+				padding: 7px;
+				cursor: pointer;
+				background: linear-gradient(135deg, #6782ce, #a4f6e1);
+				outline: 0;
+				
+				@include breakpoint($medium) {
+					top: 90px;
+					right: 7%;
+				}
+
+				img {
+					transition: 0.2s ease;
+				}
+				
+				&:hover {
+					img {
+						transform: rotate(180deg);
+					}
+				}
 			}
 
 			::slotted(div) {
-                height: 100%;
+				height: 100%;
 			}
 		}
 		.backdrop {
@@ -42,6 +73,7 @@
 			.content {
 				display: block;
 			}
+
 			.backdrop {
 				display: block;
 			}
