--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -206,6 +206,19 @@
 	}
 }
 
+.whosBehind {
+	&__headline {
+		margin: 50px 0;
+	}
+
+	&__list {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+}
+
 .extendedBenefits {
 	position: relative;
 	background-color: $even-darker-blue;
