splash header section changes and optimization for IE1 (#60)
* splash header section changes and optimization for IE1

* changed button link position

--- a/src/resources/scss/base/_types.scss
+++ b/src/resources/scss/base/_types.scss
@@ -8,8 +8,12 @@ h1, h2, h3, h4 ,h5 {
 }
 
 h1 {
-	font-size: 40px;
+	font-size: 45px;
 	line-height: (45/40);
+
+	@include breakpoint ($medium) {
+		font-size: 90px;
+	}
 }
 
 h2 {
