--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -6,20 +6,20 @@
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
         <div class="splash__content">
             <h1 class="splash__biotope">biotope</h1>
-            <h2 class="splash__uitoolchain">ui toolchain</h2>
+            <h2 class="splash__uitoolchain">Toolchain For lasting Design Systems</h2>
             <p class="splash__claim">
-                One web component library. As many worlds as you want. Decide what the future looks like.
+                Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, apps or IoT - using a single library of Web Components.
             </p>
-            <bio-button title="Explore" modifier="whiteText"
-                data-resources="[{paths: ['components/BioButton/index.js']}]" url="#resources"></bio-button>
-            <bio-button title="See Docs" modifier="blue whiteText"
+            <bio-button title="See how it works" modifier="whiteText mediumLong"
+                data-resources="[{paths: ['components/BioButton/index.js']}]" url="#benefits"></bio-button>
+            <bio-button title="See Docs" modifier="blue whiteText mediumLong"
                 data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://build.biotope.sh">
             </bio-button>
         </div>
     </div>
 </header>
 
-<section class="benefits">
+<section class="benefits" id="benefits">
     <div class="row row--reducedWidth">
         <div class="col">
             <div class="benefits__claim">
@@ -111,7 +111,7 @@
         </div>
 </section>
 
-<section class="resources" id="resources">
+<section class="resources">
         <div class="row row--reducedWidth">
             <div class="col col--large-6">
                 <h3 class="resources__headline--blue">Code & Resources</h3>
