--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -130,17 +130,17 @@
             </div>
             <div class="col col--large-6">
                 <h3>Tutorials</h3>
-                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial.svg">
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial-icon.svg">
                     <p>Create Web Components with Biotope-Element</p>
-                    <bio-button title="Watch"></bio-button>
+                    <bio-button title="Read" url="https://element.biotope.sh/"></bio-button>
                 </bio-resource>
-                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial.svg">
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial-icon.svg">
                     <p>Asynchronously load components with Biotope-Resource-Loader</p>
-                    <bio-button title="Watch"></bio-button>
+                    <bio-button title="Read" url="https://resource-loader.biotope.sh"></bio-button>
                 </bio-resource>
-                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial.svg">
+                <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/tutorial-icon.svg">
                     <p>Automate your Build process with Biotope-Build</p>
-                    <bio-button title="Watch"></bio-button>
+                    <bio-button title="Read" url=""></bio-button>
                 </bio-resource>
                 <bio-resource data-resources="[{paths: ['components/BioResource/index.js']}]" imgsrc="_assets/expert.svg" border="noBorder">
                     <p>You want to learn more? Ask an expert.</p>
