--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -24,7 +24,7 @@
         <div class="col">
             <div class="benefits__claim">
                 <img src="../_assets/intro-main.svg" alt="">
-                <div>
+                <div class="benefits__claimText">
                     <h2>
                         One Web Component Library. As Many Words As You Want.
                     </h2>
@@ -75,7 +75,7 @@
             <div class="col">
                 <img class="soEasy__line" src="../_assets/BioEasySetUp/line.svg">
                 <div class="soEasy__intro">
-                    <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">Biotope Installation </br> <strong>Start building within minutes.</strong></bio-section-headline>
+                    <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">Biotope Installation </br> <strong>Start building <br> within minutes.</strong></bio-section-headline>
                     <p>
                         No complicated registration process. No hidden costs. No more big technology decisions at the beginning of each project - 
                         Biotope works with any framework so you can build in the environment of your choice. And everyone else too. Build up your 
@@ -83,7 +83,7 @@
                     </p>
                 </div>
                 <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/1.svg" alt="step one">
-                    <h4>Install Pachage</h4>
+                    <h4>Install Package</h4>
                     <p>Install biotope as global package with npm.</p>
                     <code>npm install biotope -g</code>
                 </bio-easy-set-up>
