--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -100,6 +100,7 @@
 
 		@include breakpoint($large) {
 			margin: 0;
+			padding: 30px 0 20px 0;
 			font-size: 18px;
 			max-width: 515px;
 		}
@@ -204,8 +205,16 @@
 	padding-bottom: 90px;
 
 	&__claim {
-		margin: 20px 0;
+		margin: 20px 0 80px 0;
 		text-align: center;
+
+		@include breakpoint($medium) {
+			text-align: left;
+			display: flex;
+			width: 100%;
+			height: 400px;
+			justify-content: space-around;
+		}
 
 		> div {
 			@include breakpoint($medium) {
@@ -214,18 +223,21 @@
 		}
 
 		img {
-			max-height: 400px;
+			// max-height: 950px;
 
 			@include breakpoint($medium) {
 				flex: 1;
 			}
 		}
 
+		h2 {
+			line-height: 32px;
+		}
+	}
+
+	&__claimText{
 		@include breakpoint($medium) {
-			text-align: left;
-			display: flex;
-			width: 100%;
-			justify-content: space-around;
+			margin: auto 0;
 		}
 	}
 
